--- a/index.html
+++ b/index.html
@@ -2,15 +2,17 @@
 <html>
 <head>
 	<title>Cats and Dogs</title>
-	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.7/angular.min.js"></script>
-	<script src="script.js"></script>
-	<link rel="stylesheet" href="style.css">
-		
+	
+	<link rel="stylesheet" href="style.css"/>
 </head>
 
-<body>
-	Wow Look it's a <br>
+<body ng-app="catdog" ng-controller="mainCtrl as main">
+	I see a 
+	<a href="#/cat">cat</a>
 	<div ng-view=""></div>
+	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.7/angular.min.js"></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.7/angular-route.min.js"></script>	
+	<script src="script.js"></script>
 </body>
 
 </html>
